remove links work for phones and emails

--- a/app/views/members/_address_fields.html.erb
+++ b/app/views/members/_address_fields.html.erb
@@ -3,5 +3,5 @@
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_area :full_address, :size => "20x2" %>
   <%= f.select :typ, %w(Other Home Work), {}, {:class => "upp"} %>
-  <span class=upp>R<%= f.check_box :_destroy %></span><br/>
+  <span class=upp>remove<%= f.check_box :_destroy %></span><br/>
 </li>
