--- a/app/views/members/_emergency_contact_fields.html.erb
+++ b/app/views/members/_emergency_contact_fields.html.erb
@@ -4,5 +4,5 @@
   <%= f.text_field :name,   :size => 15 %>
   <%= f.text_field :number, :size => 10 %>
   <%= f.select :typ, %w(Mobile Home Work Other) %>
-  R<%= f.check_box :_destroy %><br/>
+  remove<%= f.check_box :_destroy %><br/>
 </li>
