--- a/app/views/members/_other_info_fields.html.erb
+++ b/app/views/members/_other_info_fields.html.erb
@@ -3,5 +3,5 @@
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :label,   :size => 15 %>
   <%= f.text_field :value,   :size => 15 %>
-  R<%= f.check_box :_destroy %><br/>
+  remove<%= f.check_box :_destroy %><br/>
 </li>
