--- a/app/views/members/_phone_fields.html.erb
+++ b/app/views/members/_phone_fields.html.erb
@@ -1,8 +1,9 @@
-<li style="list-style-type: none;" id=phone_<%=f.id%>>
+<li class=fields style="list-style-type: none;" id=phone_<%=f.id%>>
   <span class=sort_handle>(+)</span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :number, :size => 10 %>
   <%= f.select :typ, %w(Other Mobile Home Work) %>
-  P<%= f.check_box :pagable %>
-  R<%= f.check_box :_destroy %><br/>
+  Pgr<%= f.check_box :pagable %>
+  <%= link_to_remove_field("remove", f) %>
+  <%= f.hidden_field :_destroy %>
 </li>
