--- a/app/views/members/_emergency_contact_fields.html.erb
+++ b/app/views/members/_emergency_contact_fields.html.erb
@@ -1,8 +1,9 @@
-<li style="list-style-type: none;" id=contact_<%=f.id%>>
+<li class=fields style="list-style-type: none;" id=contact_<%=f.id%>>
   <span class=sort_handle>(+)</span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :name,   :size => 15 %>
   <%= f.text_field :number, :size => 10 %>
   <%= f.select :typ, %w(Mobile Home Work Other) %>
-  remove<%= f.check_box :_destroy %><br/>
+  <%= link_to_remove_field("remove", f) %>
+  <%= f.hidden_field :_destroy %>
 </li>
