--- a/app/views/members/_other_info_fields.html.erb
+++ b/app/views/members/_other_info_fields.html.erb
@@ -1,7 +1,8 @@
-<li style="list-style-type: none;" id=other_info_<%=f.id%>>
+<li class=fields style="list-style-type: none;" id=other_info_<%=f.id%>>
   <span class=sort_handle>(+)</span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :label,   :size => 15 %>
   <%= f.text_field :value,   :size => 15 %>
-  remove<%= f.check_box :_destroy %><br/>
+  <%= link_to_remove_field("remove", f) %>
+  <%= f.hidden_field :_destroy %>
 </li>
