--- a/app/views/members/_phone_fields.html.erb
+++ b/app/views/members/_phone_fields.html.erb
@@ -2,7 +2,7 @@
   <span class=sort_handle>(+)</span>
   <%= f.hidden_field :position, :size => 2 %>
   <%= f.text_field :number, :size => 10 %>
-  <%= f.select :typ, %w(Other Mobile Home Work) %>
+  <%= f.select :typ, f.object.typ_opts %>
   Pgr<%= f.check_box :pagable %>
   <%= link_to_remove_field("remove", f) %>
   <%= f.hidden_field :_destroy %>
