updated unit photo roster

--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -3,3 +3,13 @@
   They will automatically be included in application.css.
   You can use Sass (SCSS) here: http://sass-lang.com/
 */
+
+.roster_display_photo {
+  max-width: 150px;
+  max-height: 112px;
+}
+
+.roster_icon_photo {
+  max-width: 25px;
+  max-height: 22px;
+}
