--- a/app/views/unit_photos/index.html.erb
+++ b/app/views/unit_photos/index.html.erb
@@ -1,6 +1,5 @@
 <h2>Unit Photos</h2>
-
-<table>
+<table width=100%>
   <% @members.in_groups_of(5) do |row| %>
     <tr>
       <% row.each do |mem| %>
@@ -34,7 +33,6 @@
     </tr>
   <% end %>
 </table>
-
 
 
 
