--- a/app/views/avail_ops/_avail_ops_fields.html.erb
+++ b/app/views/avail_ops/_avail_ops_fields.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= op.text_field :start  , :size => 10 %></td>
-  <td><%= op.text_field :end    , :size => 10 %></td>
-  <td><%= op.text_field :comment, :size => 30 %></td>
+  <td><%= opval.text_field :start  , :size => 10 %></td>
+  <td><%= opval.text_field :end    , :size => 10 %></td>
+  <td><%= opval.text_field :comment, :size => 30 %></td>
 </tr>
