DO assignment editing works

--- a/app/views/avail_dos/index.html.erb
+++ b/app/views/avail_dos/index.html.erb
@@ -2,11 +2,14 @@ Duty Officer Availability for <%= @member.first_name %> <p/>
 Current quarter is: <%= Time.now.current_quarter %><br/>
 Current year is: <%= Time.now.year %>
 
-<%= form_for @member do |mem| %>
+<%= form_for @member, :method => :post, :url => member_avail_dos_path(@member) do |mem| %>
   <table>
     <tr><th>Year</th><th>Quarter</th><th>Week</th><th>Status</th><th>Comment</th></tr>
     <% @member.avail_dos_for(Time.now.year, Time.now.current_quarter).each do |ado| %>
-      <%= mem.fields_for :avail_ops, ado do |ido| %>
+      <%= mem.fields_for :avail_dos, ado do |ido| %>
+        <%= ido.hidden_field :year, :value => ado.year %>
+        <%= ido.hidden_field :quarter, :value => ado.quarter %>
+        <%= ido.hidden_field :week, :value => ado.week %>
         <tr>
           <td><%= Time.now.year %></td><td><%= Time.now.current_quarter %></td>
           <td><%= ado.week%></td>
