--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -19,4 +19,6 @@ Current year is: <%= Time.now.year %><p/>
   <% end %>
   </tbody>
 </table>
+<p/>
+( <%= link_to "Edit", edit_do_assignment_path(1) %> )
 
