added next/prev links for member/show and member/edit

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -20,7 +20,9 @@
         <td align=left width=33%>Member Edit</td>
         <td align=center width=33%><%= link_to("Back", member_path(@member)) %></td>
         <td align=right width=33%>
+            <%= link_to('<', edit_member_path(@member.prev_member_id)) %>
             <input size=14 id="autoselect" value="Find Member">
+            <%= link_to('>', edit_member_path(@member.next_member_id)) %>
         </td>
       </tr></table>
     </div>
