--- a/app/views/certs/index.html.erb
+++ b/app/views/certs/index.html.erb
@@ -1,24 +1,56 @@
-Certs for <%= link_to(@member.full_name, member_path(@member)) %>  (<%= link_to "Back", unit_certs_path %>)<p/>
+<script>var autoselectMemberNames = [ <%= Member.autoselect_member_names('/certs') %> ];</script>
 
-<%= link_to "Add new cert", new_member_cert_path(@member) %><p/>
+<%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};"  %>
+<%= javascript_tag "var MEMBER_ID = #{@member.id};" %>
+<%= javascript_include_tag "jquery-ui.min.js"       %>
+<%= javascript_include_tag "members_autoselect.js"  %>
 
-<table border=1>
-  <tr>
-    <th>Category</th>
-    <th>Expiration Date</th>
-    <th>Description</th>
-    <th>Comment</th>
-    <th>Documentation</th>
-    <th>Action</th>
-  </tr>
-  <tr><td>Medical      </td><%= raw cert_value(@member, :medical)       %></tr>
-  <tr><td>CPR          </td><%= raw cert_value(@member, :cpr)           %></tr>
-  <tr><td>Ham          </td><%= raw cert_value(@member, :ham)           %></tr>
-  <tr><td>Tracking     </td><%= raw cert_value(@member, :tracking)      %></tr>
-  <tr><td>Avalanche    </td><%= raw cert_value(@member, :avalanche)     %></tr>
-  <tr><td>Rigging      </td><%= raw cert_value(@member, :rigging)       %></tr>
-  <tr><td>ICS          </td><%= raw cert_value(@member, :ics)           %></tr>
-  <tr><td>Search Mgmt. </td><%= raw cert_value(@member, :search_mgmt)   %></tr>
-  <tr><td>SO Driver    </td><%= raw cert_value(@member, :so_driver)     %></tr>
-  <tr><td>SO Background</td><%= raw cert_value(@member, :so_background) %></tr>
-</table>
+<div id=x_container>
+  <div id=x_wide_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td width=250 align=left>
+            Member Certs: <b><%= link_to(@member.full_name, member_path(@member)) %></b>
+          </td>
+          <td align=center>
+            <%= link_to("Back", unit_certs_path) %>
+          </td>
+          <td width=250 align=right>
+            <%= link_to('<', member_certs_path(@member.prev_member_id)) %>
+            <input size=14 id="autoselect" value="Find Member">
+            <%= link_to('>', member_certs_path(@member.next_member_id)) %>
+          </td>
+        </tr>
+      </table>
+    </div>
+
+    <div id=x_single_col>
+
+
+      <table border=1 align=center>
+        <tr>
+          <th>Category</th>
+          <th>Expiration Date</th>
+          <th>Description</th>
+          <th>Comment</th>
+          <th>Documentation</th>
+          <th>Action</th>
+        </tr>
+        <tr><td>Medical      </td><%= raw cert_value(@member, :medical)       %></tr>
+        <tr><td>CPR          </td><%= raw cert_value(@member, :cpr)           %></tr>
+        <tr><td>Ham          </td><%= raw cert_value(@member, :ham)           %></tr>
+        <tr><td>Tracking     </td><%= raw cert_value(@member, :tracking)      %></tr>
+        <tr><td>Avalanche    </td><%= raw cert_value(@member, :avalanche)     %></tr>
+        <tr><td>Rigging      </td><%= raw cert_value(@member, :rigging)       %></tr>
+        <tr><td>ICS          </td><%= raw cert_value(@member, :ics)           %></tr>
+        <tr><td>Search Mgmt. </td><%= raw cert_value(@member, :search_mgmt)   %></tr>
+        <tr><td>SO Driver    </td><%= raw cert_value(@member, :so_driver)     %></tr>
+        <tr><td>SO Background</td><%= raw cert_value(@member, :so_background) %></tr>
+      </table>
+
+    </div>
+    <div id=x_footer> </div>
+
+  </div>
+</div>
