--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -1,24 +1,40 @@
-Unit Duty Officers<p/>
-Current quarter is: <%= Time.now.current_quarter %><br/>
-Current year is: <%= Time.now.year %><p/>
+<div id=x_container>
+  <div id=x_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td align=left><b>Team Duty Officers</b></td>
+          <td align=right>
+            <%= link_to("Edit My DO Availability", member_avail_dos_path(current_member)) %>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div id=x_single_col class=centered>
+      Current quarter is: <%= Time.now.current_quarter %> / 
+      Current year is: <%= Time.now.year %><p/>
 
-<table border=1>
-  <thead>
-  <tr>
-    <th>Year</th><th>Quarter</th><th>Week</th><th>Name</th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @do_assignments.each do |a| %>
-    <tr>
-      <td><%= a.year%></td>
-      <td><%= a.quarter%></td>
-      <td><%= a.week%></td>
-      <td><%= a.name%></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
-<p/>
-( <%= link_to "Edit", edit_do_assignment_path(1) %> )
+      <table border=1 align=center>
+        <thead>
+        <tr>
+          <th>Year</th><th>Quarter</th><th>Week</th><th>Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @do_assignments.each do |a| %>
+          <tr>
+            <td><%= a.year%></td>
+            <td><%= a.quarter%></td>
+            <td><%= a.week%></td>
+            <td><%= a.name%></td>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+      <p/>
+      ( <%= link_to "Edit", edit_do_assignment_path(1) %> )
 
+    </div>
+    <div id=x_footer> </div>
+  </div>
+</div>
