--- a/app/views/unit_certs/index.html.erb
+++ b/app/views/unit_certs/index.html.erb
@@ -3,39 +3,58 @@
 <%= javascript_include_tag "unit_certs.js" %>
 <%= javascript_include_tag "unit_certs_table.js" %>
 
-<table id="myTable" class="tablesorter">
-  <thead>
-  <tr>
-    <th>Role</th>
-    <th>Name</th>
-    <th>Med.&nbsp;&nbsp;</th>
-    <th>CPR&nbsp;&nbsp;</th>
-    <th>HAM</th>
-    <th>Tracking&nbsp;&nbsp;</th>
-    <th>Avy&nbsp;&nbsp;</th>
-    <th>Rigging&nbsp;&nbsp;</th>
-    <th>ICS&nbsp;&nbsp;</th>
-    <th>Search<br/>Mgmt.&nbsp;&nbsp;</th>
-    <th>SO<br/>Driver&nbsp;&nbsp;</th>
-    <th>SO<br/>Bkgrnd&nbsp;&nbsp;</th>
-  </tr>
-  </thead>
-  <tbody>
-  <% @members.each do |mem| %>
-    <tr>
-      <td><%=mem.full_roles%></td>
-      <td class=link><%= color_name(mem) %>
-      <%= raw display_table_cert(mem, "medical")    %>
-      <%= raw display_table_cert(mem, "cpr")        %>
-      <%= raw display_table_cert(mem, "ham")        %>
-      <%= raw display_table_cert(mem, "tracking")   %>
-      <%= raw display_table_cert(mem, "avalanche")  %>
-      <%= raw display_table_cert(mem, "rigging")    %>
-      <%= raw display_table_cert(mem, "ics")        %>
-      <%= raw display_table_cert(mem, "overhead")   %>
-      <%= raw display_table_cert(mem, "driver")     %>
-      <%= raw display_table_cert(mem, "background") %>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<div id=x_container>
+  <div id=x_wide_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td align=left><b>Team Certs</b></td>
+          <td align=right>
+            <%= link_to("Edit My Certs", member_certs_path(current_member)) %>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div id=x_single_col>
+
+      <table id="myTable" class="tablesorter">
+        <thead>
+        <tr>
+          <th>Role</th>
+          <th>Name</th>
+          <th>Med.&nbsp;&nbsp;</th>
+          <th>CPR&nbsp;&nbsp;</th>
+          <th>HAM</th>
+          <th>Tracking&nbsp;&nbsp;</th>
+          <th>Avy&nbsp;&nbsp;</th>
+          <th>Rigging&nbsp;&nbsp;</th>
+          <th>ICS&nbsp;&nbsp;</th>
+          <th>Search<br/>Mgmt.&nbsp;&nbsp;</th>
+          <th>SO<br/>Driver&nbsp;&nbsp;</th>
+          <th>SO<br/>Bkgrnd&nbsp;&nbsp;</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% @members.each do |mem| %>
+          <tr>
+            <td><%=mem.full_roles%></td>
+            <td class=link><%= color_name(mem) %>
+              <%= raw display_table_cert(mem, "medical")    %>
+              <%= raw display_table_cert(mem, "cpr")        %>
+              <%= raw display_table_cert(mem, "ham")        %>
+              <%= raw display_table_cert(mem, "tracking")   %>
+              <%= raw display_table_cert(mem, "avalanche")  %>
+              <%= raw display_table_cert(mem, "rigging")    %>
+              <%= raw display_table_cert(mem, "ics")        %>
+              <%= raw display_table_cert(mem, "overhead")   %>
+              <%= raw display_table_cert(mem, "driver")     %>
+              <%= raw display_table_cert(mem, "background") %>
+          </tr>
+        <% end %>
+        </tbody>
+      </table>
+
+    </div>
+    <div id=x_footer> </div>
+  </div>
+</div>
