--- a/app/views/unit_photos/index.html.erb
+++ b/app/views/unit_photos/index.html.erb
@@ -1,38 +1,51 @@
-<h2>Unit Photos</h2>
-<table width=100%>
-  <% @members.in_groups_of(5) do |row| %>
-    <tr>
-      <% row.each do |mem| %>
-        <% unless mem.nil? %>
-          <td align=center valign=top>
-
-            <%# raw unit_member_photo(mem) %>
-
-            <table style='float: left; border:0px solid white' cellpadding='0' cellspacing='3' width=156>
-              <tr align=center>
-                <td bgcolor=#eeeeee colspan=5 height=112 style='border: 1px solid #999999'>
-                  <!--<a href='show_photo.php?photo_id=142' target='_blank'>-->
-
-                    <%= image_tag(mem.photos.first.image.url(:roster), :align => "absmiddle", :class => "roster_display_photo") %>
-
-                  <!--</a>-->
-                </td>
-              </tr>
-              <tr align=center>
-                <td colspan=5 class=body>
-                  <%= link_to(mem.full_name, member_path(mem), :style => "text-decoration:none;") %>
-                </td>
-              </tr>
-              <%= raw display_extra_photos(mem) %>
-            </table>
-
-
+<div id=x_container>
+  <div id=x_wide_body>
+    <div id=x_header>
+      <table width=100%>
+        <tr>
+          <td align=left><b>Team Photos</b></td>
+          <td align=right>
+            <%= link_to("Edit My Photos", member_path(current_member)) %>
           </td>
+        </tr>
+      </table>
+    </div>
+
+    <div id=x_single_col>
+
+      <table width=890>
+        <% @members.in_groups_of(5) do |row| %>
+          <tr>
+            <% row.each do |mem| %>
+              <% unless mem.nil? %>
+                <td align=center valign=top>
+
+                  <table style='border:0px solid white' cellpadding='0' cellspacing='3' width=156>
+                    <tr align=center>
+                      <td bgcolor=#eeeeee height=112 style='border: 1px solid #999999'>
+                        <a href='<%= mem.photos.first.image.url %>' target='_blank'>
+                          <%= image_tag(mem.photos.first.image.url(:roster), :align => "absmiddle", :class => "roster_display_photo") %>
+                        </a>
+                      </td>
+                    </tr>
+                    <tr align=center>
+                      <td class=body>
+                        <%= link_to(mem.full_name, member_path(mem), :style => "text-decoration:none;") %>
+                      </td>
+                    </tr>
+                    <%= raw display_extra_photos(mem) %>
+                  </table>
+
+                </td>
+              <% end %>
+            <% end %>
+          </tr>
         <% end %>
-      <% end %>
-    </tr>
-  <% end %>
-</table>
+      </table>
 
 
+    </div>
+    <div id=x_footer> </div>
 
+  </div>
+</div>
