--- a/app/views/certs/_form.html.erb
+++ b/app/views/certs/_form.html.erb
@@ -1,7 +1,9 @@
 <%= simple_form_for [@member, @cert] do |f| %>
   <%= f.hidden_field :typ         %>
+  <%= f.input        :expiration  %>
   <%= f.input        :description %>
   <%= f.input        :comment     %>
-  <%= f.input        :link        %>
+  <%= f.input        :link        if @cert.typ == "ham"%>
+  <%= f.input        :document    unless @cert.typ == "ham"%>
   <%= f.button       :submit      %>
 <% end %>
