--- a/app/views/certs/index.html.erb
+++ b/app/views/certs/index.html.erb
@@ -1,12 +1,14 @@
 <script>var autoselectMemberNames = [ <%= Member.autoselect_member_names('/certs') %> ];</script>
+<script>var autoselectMemberNames = [ <%= Member.autoselect_member_names('/certs') %> ];</script>
 
 <%= javascript_tag "var AUTH_TOKEN = #{form_authenticity_token.inspect};"  %>
 <%= javascript_tag "var MEMBER_ID = #{@member.id};" %>
 <%= javascript_include_tag "jquery.tablesorter.min.js" %>
-<%# javascript_include_tag "members.js" %>
 <%= javascript_include_tag "certs_table.js" %>
 <%= javascript_include_tag "jquery-ui.min.js"       %>
 <%= javascript_include_tag "members_autoselect.js"  %>
+<%= javascript_include_tag :all %>
+<%= csrf_meta_tag %>
 
 <div id=x_container>
   <div id=x_body>
